--- a/src/sass/UniversalBackground.scss
+++ b/src/sass/UniversalBackground.scss
@@ -14,4 +14,26 @@ body {
   color: #{$Neon};
 }
 
+.custom-shape-divider-top-1698334611 {
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1698334611 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 80px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1698334611 .shape-fill {
+  fill: #0f3030;
+}
+
+
 /* Add your other styles here */
