--- a/src/sass/UniversalBackground.scss
+++ b/src/sass/UniversalBackground.scss
@@ -1,19 +1,22 @@
-// Define Sass variables
-$Neon: #00FFA1;
-$Blacky: #040D12;
-$Darkgreen: #183D3D;
-$Green: #5C8374;
-$Grey: #93B1A6;
+$neon: #00FFA1; //rgb(0,255,161)
+$blacky: #040D12; //rgb(4,13,18)
+$darkgreen: #183D3D; //rgb(24,61,61)
+$blue: #000F1A; //rgb(0,15,26)
+$green: #5C8374; //rgb(92,131,116)
+$grey: #93B1A6; //rgb(147,177,166)
 
 body {
-  background-color: $Darkgreen; // Use the variable here
+  background-color: $blue; // Use the variable here
 }
 
 .body {
-  background-color: $Darkgreen; // Use the variable here
-  color: #{$Neon};
+  background-color: $blue; // Use the variable here
+  color: $neon;
 }
 
+
+
+// ----------------------
 .custom-shape-divider-top-1698334611 {
   position: relative;
   top: 0;
@@ -32,8 +35,117 @@ body {
 }
 
 .custom-shape-divider-top-1698334611 .shape-fill {
-  fill: #0f3030;
+  fill: $blue;
 }
 
+// Team- mates
+
+.website-divider-container-614712 {
+  overflow:hidden;
+  position: relative;
+  height: 100%;
+}
+
+.divider-img-614712
+{
+	position: absolute;
+	width: 100%;
+	height: 250px;
+	
+	transform: scale(1, 1000);
+	bottom:0px;
+	left: 0px;
+	fill: rgb(15, 48, 48)
+}
 
 /* Add your other styles here */
+// ------------------
+.custom-shape-divider-bottom-1698581378 {
+  position: relative;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1698581378 svg {
+  position: relative;
+  display: block;
+  width: calc(102% + 1.3px);
+  height: 137px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-bottom-1698581378 .shape-fill {
+  fill: $blue;
+}
+
+// Meet the team
+
+article {
+  /* leverage cas
+  cade for cross-browser gradients */
+
+  height: 2rem;
+  background: radial-gradient(
+    hsl(100 100% 60%), 
+    hsl(200 100% 60%) 
+  ) fixed;
+  background: conic-gradient(
+    hsl(100 100% 60%), 
+    hsl(200 100% 60%), 
+    hsl(100 100% 60%) 
+  ) fixed;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+article {
+/*   background: conic-gradient(
+    hsl(100 100% 60%), 
+    hsl(200 100% 60%),
+    hsl(100 100% 60%)
+  ) fixed; */
+  color: white;
+  padding: 5vmin;
+  box-sizing: border-box;
+  display: grid;
+  place-content: center;
+  font-family: system-ui;
+  font-size: min(200%, 5vmin);
+}
+
+h1{
+  margin: 0;
+}
+
+h1 {
+  font-size: 10vmin;
+  font-weight: 200%;
+  line-height: 1.1;
+  max-inline-size: 15ch;
+  margin: auto;
+}
+
+// team images
+
+.team {
+  height: 40vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.image {
+  transform: perspective(1000px) rotateX(10deg);
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  transition: transform 0.5s, box-shadow 0.5s;
+  margin: 0 10px;
+}
+
+.image:hover {
+  transform: perspective(1000px) rotateX(0deg);
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.3);
+}
