--- a/src/sass/CarouselSkills.scss
+++ b/src/sass/CarouselSkills.scss
@@ -1,21 +1,22 @@
 @import url("https://fonts.googleapis.com/css?family=Titillium+Web:400,700&display=swap");
 
+$neon: #00FFA1; // rgb(0,255,161)
+$blacky: #040D12; // rgb(4,13,18)
+$darkgreen: #183D3D; // rgb(24,61,61)
+$blue: #000F1A; // rgb(0,15,26)
+$green: #5C8374; // rgb(92,131,116)
+$grey: #93B1A6; // rgb(147,177,166)
+// hsl(186 100% 69%)
+
+
+
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  // height: 100vh;
-  // display: grid;
-  // grid-template-rows: 1fr 3fr 1.5fr;
-  // grid-template-columns: 50px 1fr 1fr 1fr 1fr 50px;
-  // row-gap: 2vh;
-  font-family: "Titillium Web", sans-serif;
-}
 
 .carousel {
   min-height: 100vh;
@@ -35,7 +36,7 @@ body {
   &__fill {
     width: 0;
     height: inherit;
-    background: #c20000;
+    background:rgb(0,255,161);
     transition: all 0.16s;
   }
   &--primary {
@@ -109,14 +110,14 @@ body {
   }
   &__tag {
     font-size: 0.95em;
-    background: #c20000;
+    background: rgb(0,255,161);
     padding: 6px 18px;
   }
   &__title {
     font-weight: 700;
     font-size: 1.95em;
     line-height: 1.25;
-    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+    text-shadow: 0 1px 2px rgba(225, 218, 218);
   }
   &__link {
     text-decoration: none;
@@ -141,8 +142,8 @@ body {
 
 .main-post__link:hover .main-post__link-text,
 .main-post__link:hover .main-post__link-icon--arrow path {
-  color: #c20000;
-  stroke: #c20000;
+  color: rgb(0,255,161);
+  stroke: rgb(0,255,161);
 }
 
 .main-post--active {
@@ -198,11 +199,12 @@ body {
 }
 
 .post {
-  background: rgba(#0e0d0e, 0.6);
+  background: rgba(#ffffff, 0.3);
   opacity: 0.3;
   color: #fff;
   position: relative;
-  padding: 16px 20px;
+
+  height: 4rem;
   &__header {
     display: flex;
     justify-content: space-between;
@@ -210,11 +212,11 @@ body {
     font-size: 0.8em;
   }
   &__tag {
-    color: #80837e;
+    color: #fdfffc;
   }
   &__title {
     font-weight: 400;
-    font-size: 0.95em;
+    font-size: 2rem;
     line-height: 1.5;
   }
   &--active {
