--- a/src/sass/SkillsCarousel.scss
+++ b/src/sass/SkillsCarousel.scss
@@ -15,6 +15,19 @@ article{
   place-items:center;
   background-color:$blacky;
 }
+img {
+  -moz-transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  }
+  
+  img:hover {
+  -webkit-transform: scale(2);
+  -moz-transform: scale(1.04);
+  -o-transform: scale(1.04);
+  -ms-transform: scale(1.04);
+  transform: scale(1.04);
+  }
 
 
 .gallery{
